new: Переработка создания вопросов